[gd_scene load_steps=5 format=2]

[ext_resource path="res://level/main-level/MainLevel.gd" type="Script" id=1]
[ext_resource path="res://core/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://core/platforms/platform-simple/PlatformSimple.tscn" type="PackedScene" id=4]
[ext_resource path="res://core/background/Background.tscn" type="PackedScene" id=5]

[node name="MainLevel" type="Node2D"]
script = ExtResource( 1 )

[node name="Backgrounds" type="Node2D" parent="."]

[node name="Background1" parent="Backgrounds" instance=ExtResource( 5 )]

[node name="Background2" parent="Backgrounds" instance=ExtResource( 5 )]
position = Vector2( 0, 1080 )

[node name="Background3" parent="Backgrounds" instance=ExtResource( 5 )]
position = Vector2( 0, 2160 )

[node name="Platforms" type="Node2D" parent="."]
position = Vector2( 110.532, 807.074 )

[node name="PlatformSimple" parent="Platforms" instance=ExtResource( 4 )]

[node name="PlatformSimple2" parent="Platforms" instance=ExtResource( 4 )]
position = Vector2( 88.1626, 636.873 )

[node name="PlatformSimple3" parent="Platforms" instance=ExtResource( 4 )]
position = Vector2( 495.173, 316.911 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 360.278, 392.35 )
[connection signal="screen_exited" from="Backgrounds/Background1" to="." method="move_bg_to_bottom"]
[connection signal="screen_exited" from="Backgrounds/Background2" to="." method="move_bg_to_bottom"]
[connection signal="screen_exited" from="Backgrounds/Background3" to="." method="move_bg_to_bottom"]
